--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="#about-us">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><button class="login-button" onclick="window.location.href='Login.html'">Log In</button></li>
+            <li><button class="login-button" onclick="window.location.href='login.html'">Log In</button></li>
         </ul>
     </nav>
 
